<resources>
    <string name="app_name">FunctionalPrototype</string>

    <!--/////////////////////////////-->
    <!-- For Hannah's Reporting View -->
    <!--/////////////////////////////-->

    <!-- Reporting Top Navbar Headers and Buttons -->
    <string name="header_report_complete">Reporting Complete</string>
    <string name="header_report_confirmation">Reporting Confirmation</string>
    <string name="header_report_filter">Reporting Filter</string>
    <string name="home_button">Home</string>
    <string name="menu_button">Menu</string>

    <!-- Reporting Bottom NavBar Buttons -->
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="report_button">Report</string>
    <string name="end_button">End</string>

    <!-- Reporting prompt -->
    <string name="reporting_prompt">Report a…</string>

    <!-- For reporting options dropdown -->
    <string-array name="reporting_options">
        <item>Choose an option</item>
        <item>Study Space</item>
        <item>Bathroom</item>
    </string-array>

    <!--- Reporting filter strings -->
    <string name="reporting_building">Report a building:</string>
    <string name="reporting_floor">Report a floor:</string>
    <string name="reporting_text_prompt">Enter your report here:</string>

    <!-- Reporting building options -->
    <string-array name="reporting_building_options">
        <item>Choose an option</item>
        <item>Siebel Art and Design</item>
        <item>Siebel Computer Science</item>
        <item>Other</item>
    </string-array>

    <!-- Reporting floor options -->
    <!-- As a dropdown -->
    <string-array name="floor_options">
        <item>Choose an option</item>
        <item>Basement</item>
        <item>First Floor</item>
        <item>Second Floor</item>
        <item>Third Floor</item>
        <item>Fourth Floor</item>
        <item>Fifth Floor</item>
        <item>Other</item>
    </string-array>
    <!-- As radio buttons -->
    <string name="floor_basement">Basement</string>
    <string name="floor_first">First Floor</string>
    <string name="floor_second">Second Floor</string>
    <string name="floor_third">Third Floor</string>
    <string name="floor_fourth">Fourth Floor</string>
    <string name="floor_fifth">Fifth Floor</string>
    <string name="floor_other">Other</string>

    <!-- Report comments -->
    <string name="report_comment_prompt">Enter your report below:</string>

    <!-- Report completion -->
    <string name="reporting_complete">Success! Your report has been submitted to UIUC Facilities &amp; Services at fsserviceoffice@illinois.edu </string>

    <!--/////////////////////////////-->
    <!-- For Hannah's Location Request -->
    <!--/////////////////////////////-->
    <string name="request_location_header">Set Location</string>
    <string name="request_location_prompt">Allow app to access your location?</string>
    <string name="allow_while_using">Allow While Using</string>
    <string name="allow_once">Allow Once</string>
    <string name="dont_allow">Don\'t Allow</string>


    <!--/////////////////////////////-->
    <!-- For Hannah's Study Space Filter -->
    <!--/////////////////////////////-->
    <string name="UIUC_space_header">UIUC Study Space Finder</string>
    <string name="current_location_header">Current Location</string>
    <string name="distance_header">Distance</string>
    <string name="placeholder_miles">0.5 miles</string>
    <string name="max_miles">Max: 5.0 miles</string>
    <string name="min_miles_label">0.0</string>
    <string name="max_miles_label">5.0</string>
    <string name="study_space_type">Study Space Type</string>
    <string name="open_now">Open Now</string>
    <string name="facility_label">Facility</string>
    <string name="cafe_food">Cafe/Food</string>
    <string name="filter_apply_button">Apply</string>
</resources>