<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportingConfirmation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ////////////////////////////////////// -->
        <!-- ///////// Top Navigation Bar /////////-->
        <!-- ////////////////////////////////////// -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E84A27"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <Button
                    android:id="@+id/menu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/menu_button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/header_report_complete"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/home_button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!-- ////////////////////////////////////// -->
            <!-- /////////// Report Complete ///////////-->
            <!-- ////////////////////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Choose the building to report -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reporting_complete"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- /////////////////////////////////////// -->
            <!-- //////// Bottom Navigation Bar //////// -->
            <!-- ///////////////////////////////////////-->
            <GridLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:columnCount="2"
                android:background="#E84A27">

                <Button
                    android:id="@+id/end_button_report_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_button"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/transparent"
                    android:textStyle="bold"
                    android:layout_columnWeight="1"/>
            </GridLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Menu (sliding Drawer) -->
    <LinearLayout
        android:id="@+id/drawerMenu"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/drawer_top_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:background="@color/illini_orange"
            android:elevation="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Menu"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buildings_list_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Buildings List"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/illini_blue"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/report_issue_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Report an Issue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/illini_blue"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>